<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jaspersoft</groupId>
    <artifactId>jrs-rest-java-client</artifactId>
    <version>5.6.0-BETA</version>
    <name>REST client for JasperReports server</name>
    <url>http://github.com/Jaspersoft/jrs-rest-java-client</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <powermock.version>1.5.5</powermock.version>
    </properties>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>com.jaspersoft.jasperserver</groupId>-->
            <!--<artifactId>jasperserver-dto</artifactId>-->
            <!--<version>5.6.1</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>2.5</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-json</artifactId>
            <version>1.18</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-multipart</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>2.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.7</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito & extensions -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-testng</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.version}</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-easymock</artifactId>
            <version>${powermock.version}</version>
        </dependency>

        <!-- EasyMock -->
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>3.2</version>
        </dependency>

        <dependency>
            <groupId>com.owlike</groupId>
            <artifactId>genson</artifactId>
            <version>0.99</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.51</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.0.4</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jrs-ce-releases</id>
            <name>JasperReports Server CE releases repository</name>
            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-releases/</url>
        </repository>
        <repository>
            <id>jrs-ce-snapshots</id>
            <name>JasperReports Server CE snapshots repository</name>
            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-snapshots/</url>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:http://github.com/Jaspersoft/jrs-rest-java-client</connection>
        <developerConnection>scm:git:https://github.com/Jaspersoft/jrs-rest-java-client</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <aggregate>true</aggregate>
                    <check/>
                    <instrumentation>
                        <excludes>
                            <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/dto/**</exclude>
                            <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/apiadapters/resources/support/**</exclude>
                        </excludes>
                    </instrumentation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>2.0.0</version>
                <configuration>
                    <branch>develop</branch>
                </configuration>
            </plugin>

            <!-- Used for unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <!--<version>${maven.surefire.version}</version>-->
                <configuration>
                    <skipTests>false</skipTests>
                    <excludes>
                        <exclude>**/IT.java</exclude>
                    </excludes>
                </configuration>
            </plugin>


            <!-- Used for integration tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <!--<version>${maven.failsafe.plugin.version}</version>-->
                <configuration>
                    <!-- it gives more memory for IT -->
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
    <developers>
        <developer>
            <id>borys.kolesnykov</id>
            <name>Borys Kolesnykov</name>
            <email>borys.kolesnikov@gmail.com</email>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Krasnyanskiy</id>
            <name>Alexander Krasnyanskiy</name>
            <email>krasnyanskiy.alex@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
    </developers>
</project>